--- a/index.html
+++ b/index.html
@@ -278,6 +278,7 @@
                 </button>
             </div>
             <div class="space-y-4">
+                <!-- 核心文件 -->
                 <div class="glass rounded-[2rem] p-6 border-t border-white/10">
                     <p class="text-[10px] text-blue-400 font-black uppercase mb-4 tracking-widest flex items-center gap-2">
                         <i class="fas fa-id-card"></i> 核心文件
@@ -289,6 +290,94 @@
                                 <i class="fas fa-check text-[10px] text-blue-400 opacity-0 peer-checked:opacity-100 transition-opacity"></i>
                             </div>
                             <span class="text-sm text-white/80">護照、機票與 VJW 截圖</span>
+                        </label>
+                        <label class="flex items-center gap-4 cursor-pointer group">
+                            <div class="w-6 h-6 rounded-lg border-2 border-white/10 flex items-center justify-center transition-all">
+                                <input type="checkbox" class="hidden peer">
+                                <i class="fas fa-check text-[10px] text-blue-400 opacity-0 peer-checked:opacity-100 transition-opacity"></i>
+                            </div>
+                            <span class="text-sm text-white/80">滑雪專用保險單據</span>
+                        </label>
+                    </div>
+                </div>
+
+                <!-- 滑雪專業裝備 -->
+                <div class="glass rounded-[2rem] p-6 border-t border-white/10">
+                    <p class="text-[10px] text-cyan-400 font-black uppercase mb-4 tracking-widest flex items-center gap-2">
+                        <i class="fas fa-person-skiing"></i> 滑雪專業裝備
+                    </p>
+                    <div class="space-y-4">
+                        <label class="flex items-center gap-4 cursor-pointer group">
+                            <div class="w-6 h-6 rounded-lg border-2 border-white/10 flex items-center justify-center transition-all">
+                                <input type="checkbox" class="hidden peer">
+                                <i class="fas fa-check text-[10px] text-cyan-400 opacity-0 peer-checked:opacity-100 transition-opacity"></i>
+                            </div>
+                            <span class="text-sm text-white/80">雪鏡 (Goggles) & 備用鏡片</span>
+                        </label>
+                        <label class="flex items-center gap-4 cursor-pointer group">
+                            <div class="w-6 h-6 rounded-lg border-2 border-white/10 flex items-center justify-center transition-all">
+                                <input type="checkbox" class="hidden peer">
+                                <i class="fas fa-check text-[10px] text-cyan-400 opacity-0 peer-checked:opacity-100 transition-opacity"></i>
+                            </div>
+                            <span class="text-sm text-white/80">防風防水手套 (或內層薄手套)</span>
+                        </label>
+                        <label class="flex items-center gap-4 cursor-pointer group">
+                            <div class="w-6 h-6 rounded-lg border-2 border-white/10 flex items-center justify-center transition-all">
+                                <input type="checkbox" class="hidden peer">
+                                <i class="fas fa-check text-[10px] text-cyan-400 opacity-0 peer-checked:opacity-100 transition-opacity"></i>
+                            </div>
+                            <span class="text-sm text-white/80">防曬面罩 / 脖圍 (Neck Warmer)</span>
+                        </label>
+                        <label class="flex items-center gap-4 cursor-pointer group">
+                            <div class="w-6 h-6 rounded-lg border-2 border-white/10 flex items-center justify-center transition-all">
+                                <input type="checkbox" class="hidden peer">
+                                <i class="fas fa-check text-[10px] text-cyan-400 opacity-0 peer-checked:opacity-100 transition-opacity"></i>
+                            </div>
+                            <span class="text-sm text-white/80">厚款滑雪專用襪 (2-3 雙)</span>
+                        </label>
+                        <label class="flex items-center gap-4 cursor-pointer group">
+                            <div class="w-6 h-6 rounded-lg border-2 border-white/10 flex items-center justify-center transition-all">
+                                <input type="checkbox" class="hidden peer">
+                                <i class="fas fa-check text-[10px] text-cyan-400 opacity-0 peer-checked:opacity-100 transition-opacity"></i>
+                            </div>
+                            <span class="text-sm text-white/80">排汗發熱衣褲 (洋蔥式穿法底層)</span>
+                        </label>
+                        <label class="flex items-center gap-4 cursor-pointer group">
+                            <div class="w-6 h-6 rounded-lg border-2 border-white/10 flex items-center justify-center transition-all">
+                                <input type="checkbox" class="hidden peer">
+                                <i class="fas fa-check text-[10px] text-cyan-400 opacity-0 peer-checked:opacity-100 transition-opacity"></i>
+                            </div>
+                            <span class="text-sm text-white/80">安全帽內薄毛帽 / 頭套</span>
+                        </label>
+                    </div>
+                </div>
+
+                <!-- 配件與藥品 -->
+                <div class="glass rounded-[2rem] p-6 border-t border-white/10">
+                    <p class="text-[10px] text-pink-400 font-black uppercase mb-4 tracking-widest flex items-center gap-2">
+                        <i class="fas fa-medkit"></i> 護理與配件
+                    </p>
+                    <div class="space-y-4">
+                        <label class="flex items-center gap-4 cursor-pointer group">
+                            <div class="w-6 h-6 rounded-lg border-2 border-white/10 flex items-center justify-center transition-all">
+                                <input type="checkbox" class="hidden peer">
+                                <i class="fas fa-check text-[10px] text-pink-400 opacity-0 peer-checked:opacity-100 transition-opacity"></i>
+                            </div>
+                            <span class="text-sm text-white/80">運動痠痛貼布 / 噴霧</span>
+                        </label>
+                        <label class="flex items-center gap-4 cursor-pointer group">
+                            <div class="w-6 h-6 rounded-lg border-2 border-white/10 flex items-center justify-center transition-all">
+                                <input type="checkbox" class="hidden peer">
+                                <i class="fas fa-check text-[10px] text-pink-400 opacity-0 peer-checked:opacity-100 transition-opacity"></i>
+                            </div>
+                            <span class="text-sm text-white/80">防曬乳 & 護唇膏 (雪地紫外線強)</span>
+                        </label>
+                        <label class="flex items-center gap-4 cursor-pointer group">
+                            <div class="w-6 h-6 rounded-lg border-2 border-white/10 flex items-center justify-center transition-all">
+                                <input type="checkbox" class="hidden peer">
+                                <i class="fas fa-check text-[10px] text-pink-400 opacity-0 peer-checked:opacity-100 transition-opacity"></i>
+                            </div>
+                            <span class="text-sm text-white/80">暖暖包 (放入口袋備用)</span>
                         </label>
                     </div>
                 </div>
@@ -527,6 +616,7 @@
 
         function updateLiftStatus(windSpeed, weatherCode) {
             const container = document.getElementById('lift-container');
+            if(!container) return;
             container.innerHTML = '';
             const lifts = [
                 { name: 'Appi Gondola (箱型纜車)', type: 'high' },
